cmake_minimum_required(VERSION 3.22)
project(TP1_Introduction)

set(CMAKE_CXX_STANDARD 14)

add_executable(01-helloWorld 01-helloWorld.cpp)
add_executable(02-affichageNombres 02-affichageNombres.cpp)
add_executable(03-addition 03-addition.cpp)
add_executable(04-quotientReste 04-quotientReste.cpp)
add_executable(05-tailleVariable 05-tailleVariable.cpp)
add_executable(06-echangeNombres 06-echangeNombres.cpp)
add_executable(07-codeASCII 07-codeASCII.cpp)
add_executable(08-multiplication 08-multiplication.cpp)
